[tool.poetry.dependencies]
python = "^3.8"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
openai = "^1.1.0"
starknet-py = "^0.18.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[project]
dependencies = [
    "langchain",
    "langchain-openai",
    "pydantic",
    "starknet-py>=0.18.0",
    # ... other dependencies ...
] 