[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyvbase"
version = "0.1.0"
description = "An intelligent agent framework for StarkNet and social media automation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "ParalexLabs", email = "your.email@example.com"}
]
dynamic = ["dependencies", "optional-dependencies", "classifiers"]

[tool.setuptools]
packages = ["hyvbase"]
package-dir = {"" = "hyvbase/src"} 