[project]
name = "hyvbase"
version = "0.1.0"
description = "A comprehensive framework for blockchain operations and social media integration"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.3",
    "openai>=1.0.0",
    "starknet-py>=0.18.0",
    "python-telegram-bot>=20.0",
    "tweepy>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.2",
    "python-linkedin>=4.1",
    "google-api-python-client>=2.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "wolframalpha>=5.0.0",
    "solders>=0.18.0",
    "solana>=0.30.2",
    "base58>=2.1.1",
    "vectrs>=0.1.0",
    "numpy>=1.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "isort>=5.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyvbase"] 